[package]
name = "altusd"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
